RESOLVED FIXED244905
REGRESSION (254104@main): [Reporting API] Do not expose TestReportBody as a JS-exposed type
https://bugs.webkit.org/show_bug.cgi?id=244905
Summary REGRESSION (254104@main): [Reporting API] Do not expose TestReportBody as a J...
Brent Fulgham
Reported 2022-09-07 13:39:17 PDT
I mistakenly treated TestReportBody as a public JS type that could be exposed to the web and created by JS code. This isn't right. It's just a class-cluster implementation behind ReportBody, and should not itself be exposed (just the generic ReportBody type). This patch fixes that.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-09-07 14:10:17 PDT
Brent Fulgham
Comment 2 2022-09-07 15:15:56 PDT
EWS
Comment 3 2022-09-07 23:34:39 PDT
Committed 254261@main (7c5cd05f49f9): <https://commits.webkit.org/254261@main> Reviewed commits have been landed. Closing PR #4110 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.