REGRESSION (254104@main): [Reporting API] Do not expose TestReportBody as a JS-exposed type https://bugs.webkit.org/show_bug.cgi?id=244905 <rdar://problem/99664743>

Reviewed by Chris Dumez.

I mistakenly treated TestReportBody as a public JS type that could be exposed to the web and created by JS code.
This isn't correct. TestReportBody is just a class-cluster implementation behind ReportBody, and should not itself
be exposed (just the generic ReportBody type).

This patch fixes that error.

* LayoutTests/TestExpectations: Mark a flaky test (Drive-by fix)
* Source/WebCore/Modules/reporting/ReportingScope.cpp:
(WebCore::ReportingScope::generateTestReport): Add reminder to fix a bug in test reports.
* Source/WebCore/Modules/reporting/TestReportBody.cpp: Drive-by fix (whitespace).
* Source/WebCore/Modules/reporting/TestReportBody.idl: Stop exposing the class to the JS layer.
* Source/WebCore/WebCore.xcodeproj/project.pbxproj: Remove some incorrect generated files,
and add some missed ones.

Canonical link: https://commits.webkit.org/254261@main